<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="mock_content_provider" translatable="false">Mock Content Provider</string>
    <string name="conversation_content_provider" translatable="false">Conversation Content Provider</string>
    <string name="account_cache_provider" translatable="false">Account Cache Provider</string>
    <string name="app_name" translatable="false">Unified Email</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="subject_hint">Subject</string>
    <string name="body_hint">Compose email</string>
    <string name="add_file_attachment">Attach file</string>
    <string name="add_photo_attachment">Attach picture</string>
    <string name="attach_from_service_stub1" translatable="false"></string>
    <string name="save_draft">Save draft</string>
    <string name="discard">Discard</string>
    <string name="compose">Compose</string>
    <string name="compose_title">Compose</string>
    <string-array name="compose_modes">
        
        <item>Reply</item>
        
        <item>Reply all</item>
        
        <item>Forward</item>
    </string-array>
    <string name="formatted_subject" translatable="false"><xliff:g id="prefix">%1$s</xliff:g> <xliff:g id="subject">%2$s</xliff:g></string>
    <string name="reply_subject_label" translatable="false">Re:</string>
    <string name="forward_subject_label" translatable="false">Fwd:</string>
    <string name="reply_attribution">On <xliff:g id="date">%s</xliff:g>, <xliff:g id="person">%s</xliff:g> wrote:</string>
    <string name="forward_attribution">---------- Forwarded message ----------&lt;br&gt;From: <xliff:g id="from">%1$s</xliff:g>&lt;br&gt;Date: <xliff:g id="date">%2$s</xliff:g>&lt;br&gt;Subject: <xliff:g id="subject">%3$s</xliff:g>&lt;br&gt;To: <xliff:g id="to">%4$s</xliff:g>&lt;br&gt;</string>
    <string name="forward_attribution_no_headers">---------- Forwarded message ----------</string>
    <string name="cc_attribution">Cc: <xliff:g id="cc">%1$s</xliff:g>&lt;br&gt;</string>
    <string name="select_attachment_type">Choose type of attachment</string>
    <string name="too_large_to_attach_single">Can\'t attach file over <xliff:g id="maxSize">%1$s</xliff:g>.</string>
    <string name="too_large_to_attach_multiple">One or more files not attached. Limit <xliff:g id="maxSize">%1$s</xliff:g>.</string>
    <string name="too_large_to_attach_additional">File not attached. <xliff:g id="maxSize">%1$s</xliff:g> limit reached.</string>
    <string name="generic_attachment_problem">Couldn\'t attach file.</string>
    <string name="attachment_permission_denied">Permission denied for the attachment.</string>
    <string name="recipient_needed">Add at least one recipient.</string>
    <string name="confirm_send_message_with_no_subject">There\'s no text in the message subject.</string>
    <string name="confirm_send_message_with_no_body">There\'s no text in the message body.</string>
    <string name="confirm_send_message">Send this message?</string>
    <string name="message_discarded">Message discarded.</string>
    <string name="signature">\n\n<xliff:g id="signature">%s</xliff:g></string>
    <string name="custom_from_account_label">Send mail as:</string>
    <string name="send">Send</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_unread">Mark unread</string>
    <string name="toggle_read_unread">Toggle read unread</string>
    <string name="mute">Mute</string>
    <string name="add_star">Add star</string>
    <string name="remove_star">Remove star</string>
    <string name="remove_folder">Remove from <xliff:g id="folderName">%1$s</xliff:g></string>
    <string name="archive">Archive</string>
    <string name="report_spam">Report spam</string>
    <string name="mark_not_spam">Report not spam</string>
    <string name="report_phishing">Report phishing</string>
    <string name="delete">Delete</string>
    <string name="discard_drafts">Discard drafts</string>
    <string name="discard_failed">Discard failed</string>
    <string name="refresh">Refresh</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>
    <string name="resume_draft">Edit</string>
    <string name="forward">Forward</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_change_folders">Change folders</string>
    <string name="menu_move_to">Move to</string>
    <string name="menu_move_to_state" translatable="false">0</string>
    <string name="menu_move_to_inbox">Move to Inbox</string>
    <string name="menu_manage_folders">Folder settings</string>
    <string name="report_rendering_problem" translatable="false">Looks bad</string>
    <string name="report_rendering_improvement" translatable="false">Looks good</string>
    <string name="report_rendering_problem_desc" translatable="false">
        This message looks bad.
    </string>
    <string name="report_rendering_improvement_desc" translatable="false">
        This message looks good.
    </string>
    <string name="menu_show_original">Revert auto-sizing</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_toggle_drawer">Toggle drawer</string>
    <string name="drawer_title">Navigation</string>
    <string name="mark_important">Mark important</string>
    <string name="mark_not_important">Mark not important</string>
    <string name="add_cc_label">Add Cc/Bcc</string>
    <string name="add_bcc_label">Add Bcc</string>
    <string name="quoted_text">Include quoted text</string>
    <string name="quoted_text_label">Quote text</string>
    <string name="respond_inline">Respond inline</string>
    <string name="formatted_email_address" translatable="false">&lt;<xliff:g id="email">%1$s</xliff:g>&gt;</string>
    <string name="bytes"><xliff:g id="count">%s</xliff:g>&#160;B</string>
    <string name="kilobytes"><xliff:g id="count">%s</xliff:g>&#160;KB</string>
    <string name="megabytes"><xliff:g id="count">%s</xliff:g>&#160;MB</string>
    <string name="attachment_image">Image</string>
    <string name="attachment_video">Video</string>
    <string name="attachment_audio">Audio</string>
    <string name="attachment_text">Text</string>
    <string name="attachment_application_msword">Document</string>
    <string name="attachment_application_vnd_ms_powerpoint">Presentation</string>
    <string name="attachment_application_vnd_ms_excel">Spreadsheet</string>
    <string name="attachment_application_pdf">PDF</string>
    <string name="attachment_unknown"><xliff:g id="attachmentExtension">%s</xliff:g> File</string>
    <string name="preview_attachment">Preview</string>
    <string name="save_attachment">Save</string>
    <string name="download_again">Download again</string>
    <string name="attachment_extra_option1" translatable="false"></string>
    <string name="remove_attachment_desc">Remove attachment <xliff:g id="attachmentName">%s</xliff:g></string>
    <string name="more_info_attachment">Info</string>
    <string name="no_application_found">No app can open this attachment for viewing.</string>
    <string name="fetching_attachment">Fetching attachment</string>
    <string name="please_wait">Please wait\u2026</string>
    <string name="saved">Saved,&#160;<xliff:g id="size">%s</xliff:g></string>
    <string name="download_failed">Couldn\'t download. Touch to retry.</string>
    <string name="menu_photo_save_all">Save all</string>
    <string name="menu_photo_share">Share</string>
    <string name="menu_photo_share_all">Share all</string>
    <string name="menu_photo_print">Print</string>
    <string name="saving">Saving&#8230;</string>
    <string name="choosertitle_sharevia">Share via</string>
    <string name="contextmenu_openlink">Open in Browser</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_copylink">Copy link URL</string>
    <string name="contextmenu_view_image">View image</string>
    <string name="contextmenu_dial_dot">Dial\u2026</string>
    <string name="contextmenu_sms_dot">SMS\u2026</string>
    <string name="contextmenu_add_contact">Add contact</string>
    <string name="contextmenu_send_mail">Send email</string>
    <string name="contextmenu_map">Map</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="content_description"><xliff:g id="toHeader">%1$s</xliff:g><xliff:g id="participant">%2$s</xliff:g> about <xliff:g id="subject">%3$s</xliff:g>, <xliff:g id="snippet">%4$s</xliff:g> on <xliff:g id="date">%5$s</xliff:g>, <xliff:g id="readstate">%6$s</xliff:g></string>
    <string name="content_description_today"><xliff:g id="toHeader">%1$s</xliff:g><xliff:g id="participant">%2$s</xliff:g> about <xliff:g id="subject">%3$s</xliff:g>, <xliff:g id="snippet">%4$s</xliff:g> at <xliff:g id="time">%5$s</xliff:g>, <xliff:g id="readstate">%6$s</xliff:g></string>
    <string name="content_description_with_folders"><xliff:g id="toHeader">%1$s</xliff:g><xliff:g id="participant">%2$s</xliff:g> about <xliff:g id="subject">%3$s</xliff:g>, <xliff:g id="snippet">%4$s</xliff:g> on <xliff:g id="date">%5$s</xliff:g>, <xliff:g id="readstate">%6$s</xliff:g>, labels: <xliff:g id="folders">%7$s</xliff:g></string>
    <string name="content_description_today_with_folders"><xliff:g id="toHeader">%1$s</xliff:g><xliff:g id="participant">%2$s</xliff:g> about <xliff:g id="subject">%3$s</xliff:g>, <xliff:g id="snippet">%4$s</xliff:g> at <xliff:g id="time">%5$s</xliff:g>, <xliff:g id="readstate">%6$s</xliff:g>, labels: <xliff:g id="folders">%7$s</xliff:g></string>
    <string name="read_string">conversation read</string>
    <string name="unread_string">conversation unread</string>
    <string name="filtered_tag"> [<xliff:g id="tag">%1$s</xliff:g>]<xliff:g id="subject">%2$s</xliff:g></string>
    <string name="badge_and_subject"><xliff:g>%1$s</xliff:g> <xliff:g>%2$s</xliff:g></string>
    <plurals name="draft">
        
        <item quantity="one">Draft</item>
        
        <item quantity="other">Drafts</item>
    </plurals>
    <string name="sending">Sending\u2026</string>
    <string name="message_retrying">Retrying\u2026</string>
    <string name="message_failed">Failed</string>
    <string name="send_failed">Message wasn\'t sent.</string>
    <string name="me_object_pronoun">me</string>
    <string name="me_subject_pronoun">me</string>
    <plurals name="confirm_delete_conversation">
        
        <item quantity="one">Delete this conversation?</item>
        
        <item quantity="other">Delete these <xliff:g id="count">%1$d</xliff:g> conversations?</item>
    </plurals>
    <plurals name="confirm_archive_conversation">
        
        <item quantity="one">Archive this conversation?</item>
        
        <item quantity="other">Archive these <xliff:g id="count">%1$d</xliff:g> conversations?</item>
    </plurals>
    <plurals name="confirm_discard_drafts_conversation">
        
        <item quantity="one">Discard this message?</item>
        
        <item quantity="other">Discard these <xliff:g id="count">%1$d</xliff:g> messages?</item>
    </plurals>
    <string name="confirm_discard_text">Discard this message?</string>
    <string name="loading_conversations">Loading\u2026</string>
    <string name="empty_inbox">You\'re all done! Please enjoy your day.</string>
    <string name="empty_search">Whoops! We didn\'t find anything for \"<xliff:g id="search_query">%1$s</xliff:g>\".</string>
    <string name="empty_spam_folder">Hooray, no spam here!</string>
    <string name="help_and_info">Help</string>
    <string name="feedback">Send feedback</string>
    <string name="mail_search_factor_all">ALL</string>
    <string name="mail_search_factor_subject">SUBJECT</string>
    <string name="mail_search_factor_sender">SENDER</string>
    <string name="mail_search_factor_receiver">RECEIVER</string>
</resources>