<?xml version="1.0" encoding="utf-8"?>

<!--
     Copyright (C) 2013 Google Inc.
     Licensed to The Android Open Source Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/star"
          android:showAsAction="always"
          android:title="@string/add_star"
          android:icon="@drawable/ic_star_off_convo_view_holo_light" />

    <item android:id="@+id/remove_star"
          android:showAsAction="always"
          android:title="@string/remove_star"
          android:icon="@drawable/ic_star_on_convo_view_holo_light" />

    <item android:id="@+id/delete"
          android:showAsAction="always"
          android:title="@string/delete"
          android:icon="@drawable/ic_menu_trash_holo_light"/>

    <item android:id="@+id/forward"
          android:showAsAction="always"
          android:title="@string/forward"
          android:icon="@drawable/ic_forward_holo_light" />

    <!-- Always available -->
    <item android:id="@+id/settings"
          android:showAsAction="never"
          android:title="@string/menu_settings" />

    <!-- Always available -->
    <item android:id="@+id/feedback_menu_item"
          android:showAsAction="never"
          android:title="@string/feedback" />

    <!-- Always available -->
    <item android:id="@+id/help_info_menu_item"
          android:showAsAction="never"
          android:title="@string/help_and_info" />
</menu>