<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 Google Inc.
     Licensed to The Android Open Source Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Menu for the action mode invoked when items are selected
     in the conversation list -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/y_button"
        android:title="@string/archive"
        android:showAsAction="ifRoom"
        android:icon="@drawable/archive"
        android:alphabeticShortcut="@string/trigger_y_char"/>

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:showAsAction="ifRoom"
        android:icon="@drawable/trash"/>

    <item
        android:id="@+id/change_labels"
        android:showAsAction="ifRoom"
        android:title="@string/menu_change_labels"
        android:icon="@drawable/ic_menu_labels_holo_light" />

    <item
        android:id="@+id/read_unread"
        android:title="@string/mark_read"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_mark_unread_holo_light" />

    <item android:id="@+id/star"
        android:title="@string/star"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_star_holo_light" />

    <item
        android:id="@+id/mark_important"
        android:title="@string/mark_important"
        android:showAsAction="never"
        android:icon="@drawable/ic_email_caret_double" />

    <item
        android:id="@+id/mark_not_important"
        android:title="@string/mark_not_important"
        android:showAsAction="never"
        android:icon="@drawable/ic_email_caret_single" />

    <item
        android:id="@+id/mute"
        android:title="@string/mute"
        android:showAsAction="never" />

    <item
        android:id="@+id/report_spam"
        android:title="@string/report_spam"
        android:showAsAction="never"
        android:icon="@drawable/ic_spam_normal_holo_light" />

</menu>
