<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2016, The Linux Foundation. All rights reserved.

     Redistribution and use in source and binary forms, with or without
     modification, are permitted provided that the following conditions are
     met:
         * Redistributions of source code must retain the above copyright
           notice, this list of conditions and the following disclaimer.
         * Redistributions in binary form must reproduce the above
           copyright notice, this list of conditions and the following
           disclaimer in the documentation and/or other materials provided
           with the distribution.
         * Neither the name of The Linux Foundation nor the names of its
           contributors may be used to endorse or promote products derived
           from this software without specific prior written permission.

     THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
     WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
     MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
     ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
     BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
     CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
     SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
     BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
     WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
     OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
     IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<com.android.mail.ui.MaterialSearchFactorSelecteView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mail_filter_and_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone" >

    <RadioGroup
        android:id="@+id/group_check_factor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/check_factor_all"
            style="@style/MailSearchFactorItemStyle"
            android:checked="true"
            android:textColor="@android:color/white"
            android:background="@color/search_factor_selector_color"
            android:text="@string/mail_search_factor_all" />

        <RadioButton
            android:id="@+id/check_factor_subject"
            style="@style/MailSearchFactorItemStyle"
            android:text="@string/mail_search_factor_subject" />

        <RadioButton
            android:id="@+id/check_factor_sender"
            style="@style/MailSearchFactorItemStyle"
            android:text="@string/mail_search_factor_sender" />

        <RadioButton
            android:id="@+id/check_factor_receiver"
            style="@style/MailSearchFactorItemStyle"
            android:text="@string/mail_search_factor_receiver" />
    </RadioGroup>
</com.android.mail.ui.MaterialSearchFactorSelecteView>